# word_of_the_year

./: README.md  pyproject.toml
results/: bert.json  heatmap.json  heatmap_2.json  plot.json  plot_2.json
src/sentence_embedding/: sentence_embedding.py
src/word_embedding/: word_embedding.py  word_embedding_2.py
tests/: cosine_score.txt
word_meanings/: 00_word_meanings.csv  00_word_meanings_2.csv
wordlists/: 00_all_wordlists.csv  00_translations.csv  02_norwegian_words.csv  03_russian_words.csv  04_ukrainian_words.csv  05_german_words.csv  06_japanese_words.csv  07_portoguese_words.csv  10_dutch_words.csv  12_latvian_words.csv  14_us_words.csv
wordlists/countries_seperated/: 01_danish_words.csv  08_spanish_words.csv  09_estonian_words.csv  13_australian_words.csv  15_british_words.csv
